--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "whitenoise_flutter" "\0"
+            VALUE "FileDescription", "whitenoise" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "whitenoise_flutter" "\0"
+            VALUE "InternalName", "whitenoise" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "whitenoise_flutter.exe" "\0"
-            VALUE "ProductName", "whitenoise_flutter" "\0"
+            VALUE "OriginalFilename", "whitenoise.exe" "\0"
+            VALUE "ProductName", "whitenoise" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
