Added contact list and search pages (#4)
* feat: added some assets and util classes

* chore: added util packages

* feat: empty chat screen

* chore: changed name from ContactListAppBar to ChatListAppBar

* patch: mergedd empty chat screen with chat screen, updated the chatlist appbar to extend preferredSizeWidget

* feat: implement search functionality with contact list UI

* patch:moved filter operations out of build

---------

Co-authored-by: Muhammad Qaasim <q.akorede@featuremind.com>
Co-authored-by: Jeff Gardner <202880+erskingardner@users.noreply.github.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
     rust_lib_whitenoise:
         path: rust_builder
     flutter_rust_bridge: 2.9.0
+    flutter_screenutil: ^5.9.3
+    flutter_svg: ^2.1.0
+    gap: ^3.0.1
 
 dev_dependencies:
     flutter_test:
@@ -65,10 +68,9 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - assets/
+        - assets/svgs/
+        - assets/pngs/
     #   - images/a_dot_ham.jpeg
-
-    # An image asset can refer to one or more resolution-specific "variants", see
-    # https://flutter.dev/to/resolution-aware-images
 
     # For details regarding adding assets from package dependencies, see
     # https://flutter.dev/to/asset-from-package
