--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     flutter_screenutil: ^5.9.3
     flutter_svg: ^2.1.0
     gap: ^3.0.1
+    go_router: ^15.1.2
 
 dev_dependencies:
     flutter_test:
