--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,24 @@ dependencies:
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
-    flutter_riverpod: 2.6.1
     rust_lib_whitenoise:
-        path: rust_builder
+      path: rust_builder
     flutter_rust_bridge: 2.9.0
-    flutter_screenutil: ^5.9.3
+    flutter_riverpod: ^2.6.1 #used for api connection and state management
     flutter_svg: ^2.1.0
     gap: ^3.0.1
+    emoji_picker_flutter: ^4.3.0
+    date_format: ^2.0.9
+    #carbon_icons: ^0.0.1+2
+    audio_waveforms: ^1.3.0
+    image_picker: ^1.1.2
+    cached_network_image: ^3.4.1
+    path_provider: ^2.1.5
+    dio: ^5.8.0+1
+    flutter_screenutil: ^5.9.3
     go_router: ^15.1.2
+    animate_do: ^3.3.9
+    supa_carbon_icons: ^0.0.1+6
 
 dev_dependencies:
     flutter_test:
@@ -66,15 +76,20 @@ flutter:
     # the material Icons class.
     uses-material-design: true
 
-    # To add assets to your application, add an assets section, like this:
+    fonts:
+      - family: OverusedGrotesk-VF
+        fonts:
+          - asset: assets/fonts/OverusedGrotesk-VF.woff2
+
     assets:
-        - assets/
-        - assets/svgs/
-        - assets/pngs/
+      - assets/svgs/
+      - assets/pngs/
+      - assets/fonts/
+    # To add assets to your application, add an assets section, like this:
+    # assets:
+    #   - images/a_dot_burr.jpeg
     #   - images/a_dot_ham.jpeg
 
-    # For details regarding adding assets from package dependencies, see
-    # https://flutter.dev/to/asset-from-package
 
     # To add custom fonts to your application, add a fonts section here,
     # in this "flutter" section. Each entry in this list should have a
