--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,7 +8,8 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 flutter_rust_bridge = "=2.10.0"
-whitenoise = { version = "0.1.0", git = "https://github.com/parres-hq/whitenoise", rev = "801224cbe027d906cd8462e619a39705cfa889ed" }
+whitenoise = { version = "0.1.0", git = "https://github.com/parres-hq/whitenoise", rev = "635ee2aac29200bc42aaea76ab359b3fd5b00083" }
+# whitenoise = { version = "0.1.0", path = "../../whitenoise" }
 tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
 serde_json = "1.0.140"
 hex = "0.4"
