Fix zapstore config

--- a/zapstore.yaml
+++ b/zapstore.yaml
@@ -14,18 +14,16 @@ description: |
 repository: https://github.com/parres-hq/whitenoise_flutter
 homepage: https://whitenoise.chat
 images:
-  - /assets/zapstore/zapstore-1.jpg
-  - /assets/zapstore/zapstore-2.jpg
-  - /assets/zapstore/zapstore-3.jpg
-  - /assets/zapstore/zapstore-4.jpg
-icon: /assets/pngs/ic_whitenoise.png
+  - assets/zapstore/zapstore-1.png
+  - assets/zapstore/zapstore-2.png
+  - assets/zapstore/zapstore-3.png
+  - assets/zapstore/zapstore-4.png
+icon: assets/pngs/ic_whitenoise.png
 version: 0.1.0
 changelog: CHANGELOG.md
 tags: privacy security android messenger cryptography freedom-tech MLS E2EE
 license: AGPL-3.0-only
 blossom_servers:
   - https://cdn.zapstore.dev
-  - https://blossom.band
-  - https://blossom.primal.net
 assets:
-  - /build/app/outputs/apk/release/app-arm64-v8a-release.apk
+  - build/app/outputs/apk/release/app-arm64-v8a-release.apk
