--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,6 +14,10 @@ tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
 serde_json = "1.0.140"
 hex = "0.4"
 url = "2.5.1"
+bip39 = "2.0"
+rand = "0.8"
+cdk = { git = "https://github.com/thesimplekid/cdk", branch = "uuid_version", default-features = false, features = ["wallet"] }
+cdk-redb = { git = "https://github.com/thesimplekid/cdk", branch = "uuid_version", default-features = false, features = ["wallet"] }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
